# QSimVerifier

./: README.md  pyproject.toml
data/: hadamard_mutations.json
docs/: README.md
notebooks/: mutation_analysis.ipynb
src/data/: gen_mutation_dataset.py
src/mutation_operators/: hadamard_mutator.py  replace_hadmard.py
