[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qsimverifier"
version = "0.1.0"
description = "Quantum circuit mutation testing tool"
authors = [
  {name = "Jeshik", email = "jeshik.purvik@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "qiskit>=1.0.0",
  "qiskit-aer"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
